--- a/client/webUI/src/app/pages/employee-code/employee-code.component.css
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.css
@@ -1,33 +1,32 @@
+/* main section */
 .main-section {
     display: flex;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
 }
-
+/* title lg */
 .title-lg {
     font-weight: bold;
     margin-bottom: 5px;
 }
-
-.input-lg input{
-    height: 40px !important;
-    width: 300px !important;
-    font-size: 30px !important;
-    font-weight: bold !important;
-    border: 2px solid #000 !important;
-    background-color: white !important;
+/* input lg */
+.input-lg {
+    display: block !important;
 }
-
+.input-lg input {  
+    font-size: 24px !important;
+    font-weight: bold !important;  
+}
+/* btn lg */
 .btn-lg {
     display: block;
-    height: 45px;
+    height: 50px;
     width: 308px;
     border: 2px solid #000;
     color: white !important;
     background-color: #000 !important;
-    border-radius: 0px !important;
-    margin-top: 10px;
+    border-radius: 0px !important;   
     font-weight: bold;
     letter-spacing: 0.5px;
     font-size: 18px;
