--- a/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,11 @@
-<p>page-not-found works!</p>
+<section class="main-section">
+    <div>
+        <h4 class="title-lg">Oops! Page not Found.</h4>
+        <p class="paragraph-text">The requested URL was not found on this server. The page you are looking for might
+            have been removed, had its name changed or it's temporarily unavailable.
+        </p>
+        <button mat-flat-button class="btn-lg" (click)="goBack()">
+            <span>Go Back</span>
+        </button>
+    </div>
+</section>
