--- a/client/webUI/src/app/pages/employee-code/employee-code.component.css
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.css
@@ -5,19 +5,23 @@
     align-items: center;
     justify-content: center;
 }
+
 /* title lg */
 .title-lg {
     font-weight: bold;
     margin-bottom: 5px;
 }
+
 /* input lg */
 .input-lg {
     display: block !important;
 }
-.input-lg input {  
+
+.input-lg input {
     font-size: 24px !important;
-    font-weight: bold !important;  
+    font-weight: bold !important;
 }
+
 /* btn lg */
 .btn-lg {
     display: block;
@@ -26,9 +30,25 @@
     border: 2px solid #000;
     color: white !important;
     background-color: #000 !important;
-    border-radius: 0px !important;   
+    border-radius: 0px !important;
     font-weight: bold;
     letter-spacing: 0.5px;
     font-size: 18px;
     cursor: pointer;
+}
+
+/* admin access */
+.admin-access-link {
+    text-decoration: none;
+    color: #000;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    background: #ffa50038;
+    font-weight: 500;
+    padding: 3px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
 }
