update style changes

--- a/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
@@ -10,7 +10,7 @@
             <input matInput>
             <mat-icon matSuffix>vpn_key</mat-icon>
         </mat-form-field>
-        <button mat-flat-button class="btn-lg">Send Request</button>
+        <button mat-flat-button class="btn-lg">Submit</button>
         <a  class="admin-access-link" [routerLink]="[ '/employee-code']">
             <mat-icon matSuffix>admin_panel_settings</mat-icon>
             <span>Employee Login Access</span></a>
