--- a/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
@@ -5,7 +5,7 @@
             have been removed, had its name changed or it's temporarily unavailable.
         </p>
         <button mat-flat-button class="btn-lg" (click)="goBack()">
-            <span>Go Back</span>
+            <span>Back</span>
         </button>
     </div>
 </section>
