--- a/client/webUI/src/app/pages/employee-code/employee-code.component.css
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.css
@@ -25,16 +25,16 @@
 /* btn lg */
 .btn-lg {
     display: block;
-    height: 50px;
-    width: 308px;
-    border: 2px solid #000;
+    height: 60px;
+    width: 308px;    
     color: white !important;
     background-color: #000 !important;
-    border-radius: 0px !important;
+    border-radius: 3px !important;
     font-weight: bold;
-    letter-spacing: 0.5px;
+    letter-spacing: 1px;
     font-size: 18px;
     cursor: pointer;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
 /* admin access */
@@ -46,9 +46,11 @@
     margin-top: 10px;
     background: #ffa50038;
     font-weight: 500;
-    padding: 3px 0px;
+    padding: 5px 0px;
+    border-radius: 3px !important;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 13px;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
