--- a/client/webUI/src/app/pages/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.html
@@ -5,7 +5,7 @@
             <input matInput>
             <mat-icon matSuffix>redeem</mat-icon>
         </mat-form-field>
-        <button mat-flat-button class="btn-lg">Send Code</button>
+        <button mat-flat-button class="btn-lg">Submit</button>
         <a  class="admin-access-link" [routerLink]="[ '/admin-login-access']">
             <mat-icon matSuffix>admin_panel_settings</mat-icon>
             <span>Administrator Login Access</span></a>
