--- a/client/webUI/src/app/pages/page-not-found/page-not-found.component.css
+++ b/client/webUI/src/app/pages/page-not-found/page-not-found.component.css
@@ -14,19 +14,21 @@
 
 /* btn lg */
 .btn-lg {
-    height: 50px;
-    width: 100%;
-    border: 2px solid #000;
+    height: 60px;
+    margin-left: 60px;
+    width: 308px;   
     color: white !important;
     background-color: #000 !important;
     border-radius: 0px !important;
     font-weight: bold;
-    letter-spacing: 0.5px;
+    letter-spacing: 1px;
     font-size: 18px;
+    border-radius: 3px !important;
     cursor: pointer;
     display: flex;
     align-items: center;
     margin-top: 25px;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
 /* paragraph text */
