--- a/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
@@ -1,5 +1,10 @@
 <section class="main-section">
     <div>
+        <div class="main-title">
+            <h4 class="title-lg">Welcome, Administrator!</h4>
+            <p>Enter your administrator code + key and oversee the system!</p>
+        </div>
+
         <h4 class="title-lg">Administrator Code</h4>
         <mat-form-field appearance="outline" class="input-lg">
             <input matInput>
