--- a/client/webUI/src/app/pages/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.html
@@ -1,5 +1,9 @@
 <section class="main-section">
     <div>
+        <div class="main-title">
+            <h4 class="title-lg">Welcome to Your Rewards!</h4>
+            <p>Enter your employee code and discover your exclusive rewards!</p>
+        </div>
         <h4 class="title-lg">Employee Code</h4>
         <mat-form-field appearance="outline" class="input-lg">
             <input matInput>
