--- a/client/webUI/src/app/pages/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.html
@@ -1,4 +1,5 @@
 <section class="main-section">
+    <div class="bg-gift-icon"></div>
     <div>
         <div class="main-title">
             <h4 class="title-lg">Welcome to Your Rewards!</h4>
