--- a/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,4 +1,5 @@
 <section class="main-section">
+    <div class="bg-gift-icon"></div>
     <div>
         <h4 class="title-lg">Oops! Page not Found.</h4>
         <p class="paragraph-text">The requested URL was not found on this server. The page you are looking for might
