--- a/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.html
@@ -8,20 +8,83 @@
                 submissions will not be accepted. Choose wisely and enjoy your reward!</p>
         </div>
         <!-- voucher-card -->
-        <div class="voucher-card">
-           <div class="voucher-card-picture">
-            src/app/pages/select-gift-voucher/select-gift-voucher.component.ts (296 bytes)
-            src/app/pages/select-gift-voucher/select-gift-voucher.component.ts (296 bytes)
-            src/app/pages/select-gift-voucher/select-gift-voucher.component.ts (296 bytes)
-           </div>
-           <div class="voucher-card-description">
-            D:\Workspace\gift-voucher-mean-stack\client\webUI\src\app\pages> 
-            D:\Workspace\gift-voucher-mean-stack\client\webUI\src\app\pages> 
-            D:\Workspace\gift-voucher-mean-stack\client\webUI\src\app\pages> 
-            D:\Workspace\gift-voucher-mean-stack\client\webUI\src\app\pages> 
-            
-           </div>
+        <div class="voucher-card-row">
+            <div class="voucher-card">
+                <div class="product-img"><a href="single-product.html"><img
+                            src="https://template.hasthemes.com/hurst-v1/hurst/img/product/5.jpg" alt=""
+                            width="100%" /></a>
+                </div>
+                <div class="product-info">
+                    <div>
+                        <div class="product-title">Wooden Table</div>
+                        <p class="product-description"><small>This is a small size wooden table. Suitable for small sofa
+                                set and chairs.</small></p>
+                    </div>
+                    <div class="product-code">
+                        <span class="product-code-title">Code : </span>
+                        <span class="product-code-number">PROD658</span>
+                    </div>
+                    <button mat-flat-button class="btn-md">Claim Gift</button>
+                </div>
+            </div>
+
+            <div class="voucher-card">
+                <div class="product-img"><a href="single-product.html"><img
+                            src="https://template.hasthemes.com/hurst-v1/hurst/img/product/5.jpg" alt=""
+                            width="100%" /></a>
+                </div>
+                <div class="product-info">
+                    <div>
+                        <div class="product-title">Wooden Table</div>
+                        <p class="product-description"><small>This is a small size wooden table. Suitable for small sofa
+                                set and chairs.</small></p>
+                    </div>
+                    <div class="product-code">
+                        <span class="product-code-title">Code : </span>
+                        <span class="product-code-number">PROD658</span>
+                    </div>
+                    <button mat-flat-button class="btn-md">Claim Gift</button>
+                </div>
+            </div>
+
+            <div class="voucher-card">
+                <div class="product-img"><a href="single-product.html"><img
+                            src="https://template.hasthemes.com/hurst-v1/hurst/img/product/5.jpg" alt=""
+                            width="100%" /></a>
+                </div>
+                <div class="product-info">
+                    <div>
+                        <div class="product-title">Wooden Table</div>
+                        <p class="product-description"><small>This is a small size wooden table. Suitable for small sofa
+                                set and chairs.</small></p>
+                    </div>
+                    <div class="product-code">
+                        <span class="product-code-title">Code : </span>
+                        <span class="product-code-number">PROD658</span>
+                    </div>
+                    <button mat-flat-button class="btn-md">Claim Gift</button>
+                </div>
+            </div>
+
+            <div class="voucher-card">
+                <div class="product-img"><a href="single-product.html"><img
+                            src="https://template.hasthemes.com/hurst-v1/hurst/img/product/5.jpg" alt=""
+                            width="100%" /></a>
+                </div>
+                <div class="product-info">
+                    <div>
+                        <div class="product-title">Wooden Table</div>
+                        <p class="product-description"><small>This is a small size wooden table. Suitable for small sofa
+                                set and chairs.</small></p>
+                    </div>
+                    <div class="product-code">
+                        <span class="product-code-title">Code : </span>
+                        <span class="product-code-number">PROD658</span>
+                    </div>
+                    <button mat-flat-button class="btn-md">Claim Gift</button>
+                </div>
+            </div>
         </div>
-        <!-- voucher-card -->        
+        <!-- /voucher-card -->
     </section>
 </section>
