--- a/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
@@ -2,7 +2,7 @@
     <div class="bg-gift-icon"></div>
     <div>
         <div class="main-title">
-            <h4 class="title-lg">Welcome, Administrator!</h4>
+            <h4 class="title-lg">Welcome, <span>Administrator!</span></h4>
             <p>Enter your administrator code + key and oversee the system!</p>
         </div>
 
