--- a/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <section class="main-section">
     <div class="bg-gift-icon"></div>
     <div>
-        <h4 class="title-lg">Oops! Page not Found.</h4>
+        <h4 class="title-lg"><span>Oops!</span> Page not Found.</h4>
         <p class="paragraph-text">The requested URL was not found on this server. The page you are looking for might
             have been removed, had its name changed or it's temporarily unavailable.
         </p>
