--- a/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.css
@@ -21,6 +21,10 @@
     margin-bottom: 5px;
 }
 
+.title-lg span{
+    color: #f68d31;
+}
+
 /* voucher-card */
 .voucher-card-row {
     display: flex;
