update graph changes

--- a/client/webUI/src/app/pages/employee-code/employee-code.component.css
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.css
@@ -1,4 +1,4 @@
-/* main section #f68d31 */
+/* main section #eb7d2e */
 .main-section {
     display: flex;
     min-height: 100vh;
@@ -6,13 +6,13 @@
     justify-content: center;
 }
 .bg-gift-icon{
-    background-image: url(../../../assets/images/people-shopping.webp);
+    background-image: url(../../../assets/images/people-gift.png);
     background-repeat: no-repeat;    
     position: absolute;   
     right: 0;
     bottom: 0;
-    height: 420px;
-    width: 420px;
+    height: 400px;
+    width: 400px;
     background-size: contain;
 }
 /* main title */
@@ -27,7 +27,7 @@
 }
 
 .title-lg span{
-    color: #f68d31;
+    color: #eb7d2e;
 }
 
 /* input lg */
@@ -62,7 +62,7 @@
     width: 100%;
     text-align: center;
     margin-top: 10px;
-    background: #f68d31;
+    background: #eb7d2e;
     font-weight: 500;
     padding: 6px 0px;
     border-radius: 3px !important;
