--- a/client/webUI/src/app/pages/page-not-found/page-not-found.component.css
+++ b/client/webUI/src/app/pages/page-not-found/page-not-found.component.css
@@ -7,13 +7,13 @@
 }
 
 .bg-gift-icon{
-    background-image: url(../../../assets/images/people-shopping.webp);
+    background-image: url(../../../assets/images/people-gift.png);
     background-repeat: no-repeat;    
     position: absolute;   
     right: 0;
     bottom: 0;
-    height: 420px;
-    width: 420px;
+    height: 400px;
+    width: 400px;
     background-size: contain;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .title-lg span{
-    color: #f68d31;
+    color: #eb7d2e;
 }
 
 /* btn lg */
