--- a/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.css
@@ -1,5 +1,5 @@
 .background-overlay {
-    background-color: #eef0f4;
+    background-color: rgba(248, 251, 252, 0.65);
     min-height: 100vh;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .title-lg span{
-    color: #f68d31;
+    color: #eb7d2e;
 }
 
 /* voucher-card */
@@ -39,6 +39,7 @@
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
     margin-bottom: 20px;
     position: relative;
+    border: 1px solid #d9e0e6;
 }
 
 .product-img {
@@ -51,7 +52,7 @@
 }
 
 .select-voucher-opacity{
-    opacity: 0.05;
+    opacity: 0.1;
 }
 
 .checked-svg{
@@ -81,4 +82,15 @@
     font-weight: 500;
     font-size: 14px;
     margin-bottom: 10px;
+}
+
+.bg-gift-icon{
+    background-image: url(../../../assets/images/people-gift.png);
+    background-repeat: no-repeat;    
+    position: fixed;   
+    right: 0;
+    bottom: 0;
+    height: 400px;
+    width: 400px;
+    background-size: contain;
 }
