--- a/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.html
@@ -2,7 +2,7 @@
     <div class="bg-gift-icon"></div>
     <section class="select-gift-page">
         <div class="main-title">
-            <h4 class="title-lg">Choose Your <span>Gift Voucher!</span></h4>
+            <h4 class="title-lg">Choose Your <span style="position: relative;">Gift Voucher! <span class="gif-bg"></span></span></h4>
             <p>Please select one gift from the options below. Choose wisely and enjoy your reward!</p>
         </div>
         <!-- voucher-card -->
