--- a/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/select-gift-voucher/select-gift-voucher.component.css
@@ -19,6 +19,7 @@
 .title-lg {
     font-weight: bold;
     margin-bottom: 5px;
+    position: relative;
 }
 
 .title-lg span{
@@ -53,6 +54,16 @@
 
 .select-voucher-opacity{
     opacity: 0.1;
+}
+.gif-bg{
+    background-image: url(../../../assets/images/gift-animation.gif);    
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    right: -80px;
+    top: -40px;
+    background-size: contain;
 }
 
 .checked-svg{
