final UI update

--- a/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
@@ -17,8 +17,7 @@
             <mat-icon matSuffix>vpn_key</mat-icon>
         </mat-form-field>
         <button mat-flat-button class="btn-lg">Submit</button>
-        <a  class="admin-access-link" [routerLink]="[ '/employee-code']">
-            <mat-icon matSuffix>admin_panel_settings</mat-icon>
-            <span>Employee Login Access</span></a>
+        <a  class="admin-access-link" [routerLink]="[ '/employee-code']">            
+            <span>Employee Login</span></a>
     </div>
 </section>
