--- a/client/webUI/src/app/pages/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.html
@@ -2,7 +2,7 @@
     <div class="bg-gift-icon"></div>
     <div>
         <div class="main-title">
-            <h4 class="title-lg">Welcome to Your <span>Rewards!</span> <span class="gif-bg"></span></h4> 
+            <h4 class="title-lg">Welcome to Your <span>Rewards!</span> <span class="gif-bg"></span></h4>
             <p>Enter your employee code and discover your exclusive rewards!</p>
         </div>
         <h4 class="title-lg">Employee Code</h4>
@@ -11,8 +11,7 @@
             <mat-icon matSuffix>redeem</mat-icon>
         </mat-form-field>
         <button mat-flat-button class="btn-lg">Submit</button>
-        <a  class="admin-access-link" [routerLink]="[ '/admin-login-access']">
-            <mat-icon matSuffix>admin_panel_settings</mat-icon>
-            <span>Administrator Login Access</span></a>
+        <a class="admin-access-link" [routerLink]="[ '/admin-login-access']">
+            <span>Administrator Login</span></a>
     </div>
 </section>
