final enhancement done

--- a/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
+++ b/client/webUI/src/app/pages/admin-login-access/admin-login-access.component.html
@@ -18,6 +18,6 @@
         </mat-form-field>
         <button mat-flat-button class="btn-lg">Submit</button>
         <a  class="admin-access-link" [routerLink]="[ '/employee-code']">            
-            <span>Employee Login</span></a>
+            <span>Access Your Rewards</span></a>
     </div>
 </section>
