--- a/client/webUI/src/app/pages/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/employee-code/employee-code.component.html
@@ -12,6 +12,6 @@
         </mat-form-field>
         <button mat-flat-button class="btn-lg">Submit</button>
         <a class="admin-access-link" [routerLink]="[ '/admin-login-access']">
-            <span>Administrator Login</span></a>
+            <span>Access Administrator Portal</span></a>
     </div>
 </section>
