--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -61,7 +61,7 @@
 }
 
 .gif-bg {
-    background-image: url(../../../assets/images/gift-animation.gif);
+    background-image: url(../../../../assets/images/gift-animation.gif);
     background-repeat: no-repeat;
     position: absolute;
     height: 100px;
@@ -101,7 +101,7 @@
 }
 
 .bg-gift-icon {
-    background-image: url(../../../assets/images/people-gift.png);
+    background-image: url(../../../../assets/images/people-gift.png);
     background-repeat: no-repeat;
     position: fixed;
     right: 0;
