--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.css
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.css
@@ -7,7 +7,7 @@
 }
 
 .bg-gift-icon{
-    background-image: url(../../../assets/images/people-gift.png);
+    background-image: url(../../../../assets/images/people-gift.png);
     background-repeat: no-repeat;    
     position: absolute;   
     right: 0;
