--- a/client/webUI/src/app/shared/home/home.component.html
+++ b/client/webUI/src/app/shared/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="access-btn">
+    <a class="admin-access-link" [routerLink]="['/employee-code']">
+        <span>Employee Access</span>
+    </a>
+    <a class="admin-access-link" [routerLink]="['/admin-login-access']">
+        <span>Administrator Access</span>
+    </a>    
+</div>
