update landing page

--- a/client/webUI/src/app/shared/home/home.component.html
+++ b/client/webUI/src/app/shared/home/home.component.html
@@ -1,8 +1,17 @@
-<div class="access-btn">
-    <a class="admin-access-link" [routerLink]="['/employee-code']">
-        <span>Employee Access</span>
-    </a>
-    <a class="admin-access-link" [routerLink]="['/admin-login-access']">
-        <span>Administrator Access</span>
-    </a>    
-</div>
+<section class="main-section">
+    <div class="bg-gift-icon"></div>
+    <div>
+        <div class="main-title">
+            <h4 class="title-lg">Welcome to Your <span>Rewards!</span> <span class="gif-bg"></span></h4>
+            <p>Enter your detail and discover your exclusive rewards!</p>
+        </div>
+        <div class="access-btn">
+            <a class="admin-access-link" [routerLink]="['/employee-code']">
+                <span>Employee Access</span>
+            </a>
+            <a class="admin-access-link" [routerLink]="['/admin-login-access']">
+                <span>Administrator Access</span>
+            </a>    
+        </div>
+    </div>
+</section>
