--- a/client/webUI/src/app/shared/home/home.component.css
+++ b/client/webUI/src/app/shared/home/home.component.css
@@ -1,22 +1,67 @@
-/* admin access */
-.admin-access-link {
-    text-decoration: none;
-    color: #fff;
-    width: fit-content;
-    text-align: center;
-    margin-top: 10px;
-    background: #000;
-    font-weight: 500;
-    padding: 5px 10px;
-    border-radius: 3px !important;
+/* main section #eb7d2e */
+.main-section {
     display: flex;
-    justify-content: center;
+    min-height: 100vh;
     align-items: center;
-    font-size: 13px;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-    margin-right: 10px;    
+    justify-content: center;
 }
 
-.access-btn{
+.bg-gift-icon {
+    background-image: url(../../../assets/images/people-gift.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 400px;
+    width: 400px;
+    background-size: contain;
+}
+
+/* admin access */
+.admin-access-link {
+    height: 60px;
+    width: fit-content;
+    color: white !important;
+    background-color: #000 !important;
+    border-radius: 0px !important;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 18px;
+    border-radius: 3px !important;
     display: flex;
+    align-items: center;    
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    margin-right: 10px;
+    text-decoration: none;
+    padding: 0px 20px;
+}
+
+.access-btn {
+    display: flex;
+}
+
+.gif-bg {
+    background-image: url(../../../assets/images/gift-animation.gif);
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: -40px;
+    background-size: contain;
+}
+
+/* main title */
+.main-title {
+    margin-bottom: 50px;
+}
+
+/* title lg */
+.title-lg {
+    font-weight: bold;
+    margin-bottom: 5px;
+    position: relative;
+}
+
+.title-lg span {
+    color: #eb7d2e;
 }
