--- a/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -5,8 +5,8 @@
         <div class="logo">YourLogo</div>
         <div class="header-links">
             <a href="#">Home</a>
-            <a href="#">Add Product</a>
-            <a href="#">Logout</a>
+            <a href="#">Profile</a>
+            <a href="#">Notifications</a>
         </div>
     </header>
 
@@ -15,8 +15,10 @@
         <!-- Sidebar -->
         <nav class="sidebar">
             <a href="#">Dashboard</a>
-            <a href="#">All Products</a>
-            <a href="#">Product List</a>
+            <a href="#">Manage Gift Cards</a>
+            <a href="#">Employee Selections</a>
+            <a href="#">Reports</a>
+            <a href="#">Settings</a>
         </nav>
 
         <!-- Main Content -->
