update folder structure

--- a/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -4,9 +4,9 @@
     <header class="header">
         <div class="logo">YourLogo</div>
         <div class="header-links">
-            <a href="#">Home</a>
             <a href="#">Profile</a>
             <a href="#">Notifications</a>
+            <a [routerLink]="[ '/add-gift-item']">Add Product</a>
         </div>
     </header>
 
@@ -15,10 +15,11 @@
         <!-- Sidebar -->
         <nav class="sidebar">
             <a href="#">Dashboard</a>
-            <a href="#">Manage Gift Cards</a>
-            <a href="#">Employee Selections</a>
-            <a href="#">Reports</a>
+            <a href="#">Gift Inventory</a>
+            <a href="#">Employee Picks</a>
+            <a href="#">Product Reports</a>
             <a href="#">Settings</a>
+            <a href="#">Help</a>
         </nav>
 
         <!-- Main Content -->
