--- a/client/webUI/src/styles.css
+++ b/client/webUI/src/styles.css
@@ -32,13 +32,13 @@ body {
     background-color: #096e09 !important;
 }
 
-/* .snackbar-info {
-    color: #eb7d2e !important;
+.snackbar-info {
+    color: #3f51b5 !important;
 }
 
 .snackbar-warning {
     color: #e9af0b !important;
-} */
+}
 
 /*================================================================================================
  bootstrap v5.3.2 responsiveness of template.
