--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,1 +1,8 @@
-<p>aside works!</p>
+<!-- Sidebar -->
+<nav class="sidebar">
+    <a [routerLink]="['/admin-dashboard/dashboard']">Dashboard</a>
+    <a [routerLink]="['//admin-dashboard/gift-inventory']">Gift Inventory</a>
+    <a [routerLink]="['/admin-dashboard/employee-picks']">Employee Picks</a>
+    <a [routerLink]="['/admin-dashboard/product-reports']">Product Reports</a>
+    <a [routerLink]="['/admin-dashboard/settings']">Settings</a>
+</nav>
