--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+ <!-- Header -->
+ <header class="header">
+    <div class="logo">YourLogo</div>
+    <div class="header-links">
+        <a href="#">Profile</a>
+        <a href="#">Notifications</a>
+        <a href="#">Add Product</a>
+    </div>
+</header>
+ <!-- /Header -->
