--- a/client/webUI/src/app/pages/home/home.component.css
+++ b/client/webUI/src/app/pages/home/home.component.css
@@ -1,67 +1,4 @@
-/* main section #eb7d2e */
-.main-section {
-    display: flex;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: center;
-}
-
-.bg-gift-icon {
-    background-image: url(../../../assets/images/people-gift.png);
-    background-repeat: no-repeat;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    height: 400px;
-    width: 400px;
-    background-size: contain;
-}
-
-/* admin access */
-.admin-access-link {
-    height: 60px;
-    width: fit-content;
-    color: white !important;
-    background-color: #000 !important;
-    border-radius: 0px !important;
-    font-weight: bold;
-    letter-spacing: 1px;
-    font-size: 18px;
-    border-radius: 3px !important;
-    display: flex;
-    align-items: center;    
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-    margin-right: 10px;
-    text-decoration: none;
-    padding: 0px 20px;
-}
-
-.access-btn {
-    display: flex;
-}
-
-.gif-bg {
-    background-image: url(../../../assets/images/gift-animation.gif);
-    background-repeat: no-repeat;
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    top: -40px;
-    background-size: contain;
-}
-
-/* main title */
-.main-title {
-    margin-bottom: 50px;
-}
-
-/* title lg */
-.title-lg {
-    font-weight: bold;
-    margin-bottom: 5px;
-    position: relative;
-}
-
-.title-lg span {
-    color: #eb7d2e;
-}
+ 
+ .logo-font{
+    font-size: 2rem;
+ } 
