--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -1,17 +1,35 @@
-<section class="main-section">
-    <div class="bg-gift-icon"></div>
-    <div>
-        <div class="main-title">
-            <h4 class="title-lg">Welcome to Your <span>Rewards!</span> <span class="gif-bg"></span></h4>
-            <p>Enter your detail and discover your exclusive rewards!</p>
-        </div>
-        <div class="access-btn">
-            <a class="admin-access-link" [routerLink]="['/employee-code']">
-                <span>Employee Access</span>
-            </a>
-            <a class="admin-access-link" [routerLink]="['/admin-login-access']">
-                <span>Administrator Access</span>
-            </a>    
-        </div>
-    </div>
+<!--container section -->
+<section class="container">
+  <!-- header section -->
+  <section>
+    <header class="d-flex justify-content-around align-items-center p-3">
+      <div class="logo-font">
+        <span class="text-dark fw-bold">Spark</span>
+        <span class="text-primary">Nest</span>
+      </div>
+      <div>
+        <a
+          mat-flat-button
+          href="https://www.google.com/"
+          target="_blank"
+          class="bg-dark py-3 shadow-sm me-2"
+          >Employee Login</a
+        >
+        <a
+          mat-flat-button
+          href="https://www.google.com/"
+          target="_blank"
+          class="px-4 py-3 bg-dark shadow-sm"
+          >Admin Login</a
+        >
+      </div>
+    </header>
+  </section>
+  <!-- /header section  -->
+   <section>
+
+   </section>
 </section>
+<!-- /container section -->
+
+ 
