--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -26,10 +26,33 @@
     </header>
   </section>
   <!-- /header section  -->
-   <section>
-
-   </section>
+  <!-- main section -->
+  <section class="main mt-5 pt-5">
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <div class="heading fw-bold text-center">
+          Unlock Your <span class="text-primary">Gift,</span> Embrace the
+          <span class="text-primary">Moment!</span>
+        </div>
+        <div class="text text-center mt-4">
+          Discover a world of rewards made just for you! Enter your unique code
+          and browse a curated selection of gifts tailored to bring joy. With
+          every choice, a moment of celebration awaits. Whether it’s a small
+          token or a grand surprise, your perfect gift is only a click away.
+          Choose, click, and celebrate with ease!
+        </div>
+        <div class="text-center mt-4">
+          <a
+            mat-flat-button
+            href="https://www.google.com/"
+            target="_blank"
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4">
+            <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
+          
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /main section -->
 </section>
 <!-- /container section -->
-
- 
